--- a/css/Custom/index.css
+++ b/css/Custom/index.css
@@ -93,8 +93,28 @@
    }
  }
  .c1{
-   color: white;
+   font-weight: bold;
+   color: #fff;
  }
+
+.dropdown-menu{
+background: linear-gradient(-45deg, #ff0000, #FF7F00, #FFFF00, #00FF00, #0000FF, #4B0082, #9400D3);
+background-size: 400% 400%;
+animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+0% {
+ background-position: 0% 50%;
+}
+50% {
+ background-position: 100% 50%;
+}
+100% {
+ background-position: 0% 50%;
+}
+}
+ 
  body{
   font-family: ubunutu;
   text-shadow: #181818;
